<resources>
    <string name="app_name">HealMe</string>
    <string name="title_home">Beranda</string>
    <string name="title_healthcare">Layanan kesehatan</string>
    <string name="title_history">Riwayat pindaian</string>
    <string name="title_profile">Profil</string>
    <string name="login_desc">Masuk untuk Memulai Deteksi Luka Kulit Anda!</string>
    <string name="title_scan">Deteksi luka</string>
    <string name="title_result">Hasil deteksi luka</string>
    <string name="email">Email</string>
    <string name="password">Sandi</string>
    <string name="password_confirmation">Konfirmasi sandi</string>
    <string name="login">Masuk</string>
    <string name="login_underline"><u>Masuk</u></string>
    <string name="no_account_text">Belum mempunyai akun?</string>
    <string name="have_account_text">Sudah punya akun?</string>
    <string name="signup">Daftar</string>
    <string name="signup_underline"><u>Daftar</u></string>
    <string name="signup_desc">Buat Akun Anda dan Mulai Deteksi Luka Kulit Anda!</string>
    <string name="name">Nama</string>
    <string name="field_not_filled">Isikan data diri dengan lengkap terlebih dahulu</string>
    <string name="password_not_match">Password tidak sesuai!</string>
    <string name="title_scan_wound">Deteksi luka anda</string>
    <string name="brief_instruction">Instruksi singkat:\n1. Pastikan pencahayaan baik\n2. Pastikan gambar tidak buram\n3. Pastikan luka terlihat dengan jelas</string>
    <string name="image_chooser">Pilih sumber gambar luka Anda</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="content_desc_image">preview image</string>
    <string name="button_scan">Deteksi sekarang!</string>
    <string name="button_change_image">Pilih gambar lain</string>
    <string name="no_image_selected">No image selected</string>
    <string name="read_more">Selengkapnya</string>
    <string name="read_less">Lebih sedikit</string>
    <string name="birth_date">%04d-%02d-%02d</string>
    <string name="prompt_gemini_result">Dalam konteks edukasi dan bukan untuk menggantikan nasihat medis profesional, Buatlah penjelasan sederhana mengenai penyakit %1s berdasarkan informasi medis, dan berikan rekomendasi pertolongan pertama yang disesuaikan dengan usia (%2d tahun), berat badan (%3d kg), dan jenis kelamin (%4s). Hasilnya harus berupa objek JSON dalam bahasa Indonesia, tanpa tanda kutip tunggal di awal dan di akhir JSON. Isi dari objek JSON tersebut harus mencakup dua kunci: \'explanation\' untuk penjelasan mengenai penyakit dan \'firstAidRecommendation\' untuk rekomendasi pertolongan pertama.</string>
    <!--    <string name="prompt_gemini_fun_fact">berikan sebuah tips kesehatan kulit yang tidak banyak diketahui orang awam dan masuk akal maksimal 50 kata. tuliskan dengan interaktif tanpa emote dan jangan banyak endline</string>-->
    <string name="prompt_gemini_fun_fact">berperanlah sebagai praktisi kesehatan kulit, berikan sebuah tips kesehatan kulit yang jarang saya ketahui walaupun itu penting dan masuk akal. tuliskan dengan interaktif tanpa emote dan maksimal 40 kata</string>
    <string name="birthdate">Tanggal lahir</string>
    <string name="gender">Jenis kelamin</string>
    <string name="weight">Berat badan (Kg)</string>
    <string name="logout">Keluar</string>
    <string name="greeting">Halo,</string>
    <string name="edit_profile">Edit profil</string>
    <string name="save_changes">Simpan perubahan</string>
    <string name="explanation">Penjelasan</string>
    <string name="confidence_score">Akurasi :</string>
    <string name="wound_type">Nama luka :</string>
    <string name="result">Result</string>
    <string name="first_aid_recommendation">Rekomendasi pertolongan pertama</string>
    <string name="back">Back</string>
    <string name="locate_nearby_healthcare">Cari layanan kesehatan terdekat</string>
    <string name="male">laki-laki</string>
    <string name="female">perempuan</string>
    <string name="select_gender">Pilih jenis kelamin anda</string>
    <string name="successfully_create_account">Akun berhasil dibuat!</string>
    <string name="failed_to_create_account">Gagal membuat akun. Error: %1s</string>
    <string name="email_invalid">Email tidak valid!</string>
    <string name="password_less_than_eight">Kata sandi harus terdiri dari setidaknya 8 karakter</string>
    <string name="fix_field">Perbaiki inputan terlebih dahulu!</string>
    <string name="recent_scan">Pindaian Terakhir</string>
    <string name="detail_scan">Selengkapnya</string>
    <string name="health_tips">Tips Kesehatan</string>
    <string name="nearby_healthcare">Layanan kesehatan terdekat</string>
    <string name="bad_image_desc">Luka tidak terlihat dengan jelas</string>
    <string name="bad_image">Contoh gambar yang buruk</string>
    <string name="good_image_desc">Luka terlihat dengan jelas</string>
    <string name="good_image">Contoh gambar yang baik</string>
    <string name="preview_image">Pratinjau gambar</string>
    <string name="no_recent_scan">Tidak ada riwayat pindaian</string>
    <string name="unknown_error">Terjadi kesalahan</string>
    <string name="change_password">Ubah sandi</string>
    <string name="settings">Pengaturan</string>
    <string name="login_success">Berhasil login!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile_success">Profil berhasil diubah!</string>
    <string name="update_profile_error">Gagal mengubah profil. Error: %1$s</string>
    <string name="login_error">Gagal login. Error: %1$s</string>
    <string name="old_password">Sandi lama</string>
    <string name="new_password">Sandi baru</string>
    <string name="update_password_success">Sandi berhasil diubah</string>
    <string name="update_password_failed">Gagal mengubah sandi. Error: %1$s</string>

    <string name="onboarding_title_1">Pindai Luka Anda</string>
    <string name="onboarding_desc_1">Gunakan HealMe untuk memindai jenis luka Anda. Kecerdasan buatan kami dapat mendeteksi jenis luka Anda, memberikan informasi yang penting untuk pengelolaan selanjutnya.</string>
    <string name="onboarding_title_2">Rekomendasi Pertolongan Pertama</string>
    <string name="onboarding_desc_2">Dapatkan penjelasan dan rekomendasi pertolongan pertama yang interaktif menggunakan Generative AI. HealMe memberikan panduan langkah demi langkah yang dapat Anda ikuti untuk mengelola luka Anda dengan lebih baik.</string>
    <string name="onboarding_title_3">Temukan Layanan Kesehatan Terdekat</string>
    <string name="onboarding_desc_3">Gunakan fitur pencarian dari HealMe untuk menemukan lokasi fasilitas kesehatan terdekat, termasuk apotek dan layanan darurat. dapatkan informasi tentang lokasi dan status operasional untuk memudahkan Anda dalam mencari bantuan medis sesuai kebutuhan.</string>
    <string name="start">Mulai!</string>
    <string name="logout_message">Apakah anda yakin ingin keluar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
</resources>