<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_image_chooser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_brief_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/subTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/title_scan_wound"
                    app:drawableStartCompat="@drawable/outline_camera_alt_24" />


                <TextView
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/brief_instruction" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/NormalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/good_image"
                            android:textAlignment="center" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="4dp"
                            android:importantForAccessibility="no"
                            android:scaleType="fitXY"
                            android:src="@drawable/sample_good_image" />

                        <TextView
                            style="@style/NormalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/good_image_desc"
                            android:textAlignment="center"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/NormalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bad_image"
                            android:textAlignment="center" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginBottom="4dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/sample_bad_image" />

                        <TextView
                            style="@style/NormalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bad_image_desc"
                            android:textAlignment="center"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/card_view_brief_instruction">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/subTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/image_chooser"
                    app:drawableStartCompat="@drawable/baseline_image_search_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_gallery"
                        style="@style/InvisibleButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gallery" />

                    <Button
                        android:id="@+id/btn_camera"
                        style="@style/InvisibleButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/camera" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/container_selected_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/subTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/preview_image"
                    app:drawableStartCompat="@drawable/outline_image_24" />

                <ImageView
                    android:id="@+id/iv_preview_selected_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/content_desc_image"
                    android:scaleType="fitCenter"
                    tools:src="@tools:sample/backgrounds/scenic" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible"
            android:elevation="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_scan"
                style="@style/NormalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="16dp"
                android:text="@string/button_scan" />

            <Button
                android:id="@+id/btn_change_image"
                style="@style/NormalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/button_change_image" />
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>