<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <FrameLayout
        android:id="@+id/container_image_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/background"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="32dp"
            android:layout_gravity="start|center">
            <TextView
                style="@style/subTitleText"
                android:textColor="@color/white_50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greeting"/>
            <TextView
                android:id="@+id/tv_greetings"
                style="@style/TitleText"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/full_names"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/container_image_profile"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/subTitleText"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black_50" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/full_names" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:importantForAccessibility="no"
                android:src="@drawable/underline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/subTitleText"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black_50" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="user@gmail.com" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:importantForAccessibility="no"
                android:src="@drawable/underline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/subTitleText"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthdate"
                android:textColor="@color/black_50" />

            <TextView
                android:id="@+id/tv_birthdate"
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="2001-01-01" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:importantForAccessibility="no"
                android:src="@drawable/underline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/subTitleText"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black_50" />

            <TextView
                android:id="@+id/tv_gender"
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="male" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:importantForAccessibility="no"
                android:src="@drawable/underline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/subTitleText"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/black_50" />

            <TextView
                android:id="@+id/tv_weight"
                style="@style/subTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="50 Kg" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:importantForAccessibility="no"
                android:src="@drawable/underline" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_edit_profile"
            style="@style/NormalButton"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/NormalButton"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>