<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.login.LoginFragment">

    <FrameLayout
        android:id="@+id/frame_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            android:src="@drawable/background" />

        <ImageView
            android:id="@+id/iv_application_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_launcher_white" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_icon">

        <TextView
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_desc"
            android:textAlignment="center" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_desc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:fontFamily="@font/lexend_deca"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:fontFamily="@font/lexend_deca"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/NormalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="8dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_text"
                android:layout_gravity="center|start"/>

            <Button
                android:id="@+id/btn_navigate_signup"
                style="@style/ClickableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_underline"
                android:layout_gravity="center|end"/>
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>